@@ -1,3 +1,8 @@
+Tue Aug  1 20:23:50 UTC 2006  Adam Mitz  <mitza@ociweb.com>
+
+        * ace/config-macosx-tiger.h:
+          Added preliminary support for Mac OS X 10.4 on Intel CPU's.
+
 Tue Aug  1 20:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-vxworks6.3.h:
